kubernetes/foldingathome/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: folding
  namespace: random
  labels:
    app: folding
spec:
  serviceName: folding
  selector:
    matchLabels:
      app: folding
  replicas: 1
  template:
    metadata:
      labels:
        app: folding
    spec:
      containers:
      - name: folding 
        image: linuxserver/foldingathome:7.6.21-ls73
        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
          # requests:
          #   memory: 128Mi
          #   cpu: 3.0
        ports:
        - containerPort: 7396
        volumeMounts:
        - name: folding-config
          mountPath: /config/config.xml
          subPath: config.xml
        - name: folding-work
          mountPath: /config/work
      restartPolicy: Always
      volumes:
      - name: folding-config
        configMap:
          name: folding-config
      - name: folding-work
        persistentVolumeClaim:
          claimName: folding-work-pvc
