kubernetes/foldingathome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: folding-svc
  namespace: random
  labels:
    name: folding-svc
spec:
  type: ClusterIP
  selector:
    app: folding
  ports:
    - port: 7396
      targetPort: 7396
