kubernetes/foldingathome/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: folding
  namespace: folding
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`folding.kube.crowlight.com`)
      kind: Rule
      services:
        - name: folding-svc
          port: 7396
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: kube-crowlight-com-staging-tls
